Fix Tag icon spacing in RTL mode

--- a/src/style/components/tag/rtl.less
+++ b/src/style/components/tag/rtl.less
@@ -21,7 +21,7 @@
   > .@{iconfont-css-prefix} + span,
   > span + .@{iconfont-css-prefix} {
     .@{tag-prefix-cls}-rtl& {
-      margin-right: 7px;
+      margin-right: 3px;
       margin-left: 0;
     }
   }
